--- a/server/.env
+++ b/server/.env
@@ -1,8 +1,5 @@
-# Database Configuration
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=password
+DB_PASSWORD=1111
 DB_NAME=saju_dating_app
-
-# JWT Configuration
-JWT_SECRET=your_super_secret_key_that_should_be_long_and_random
+JWT_SECRET=aVerySecretKey123!@#
